--- a/index.html
+++ b/index.html
@@ -111,9 +111,14 @@
   </div>
 </section>
 
-<!-- ========================= -->
-<!-- NEW MODULE: INSURANCE ALTERNATIVE -->
-<!-- ========================= -->
+<!-- IMAGE BREAK -->
+<section class="image-break">
+  <div class="image-frame">
+    <img src="assets/senior-assist.jpg" alt="Senior assisted into car" />
+  </div>
+</section>
+
+<!-- MODULE: SIMPLER ALTERNATIVE -->
 <section class="alt-module">
   <div class="alt-container alt-split">
 
@@ -122,49 +127,46 @@
 
       <ul class="alt-bullets">
         <li>
-          <strong>Insurance-based transportation adds friction</strong><br />
-          Many services depend on <strong>Medicare, Medicaid, or insurance approvals</strong>,
-          requiring paperwork, eligibility checks, and authorization workflows
-          before rides can even be scheduled.
+          <strong>Insurance-based transportation adds friction</strong>
+          Medicare, Medicaid, and insurance programs often require paperwork,
+          eligibility checks, and authorization before rides can be scheduled.
         </li>
 
         <li>
-          <strong>Delays hurt patients with recurring care</strong><br />
+          <strong>Medicare and Medicaid delays affect recurring care</strong>
           For patients who need rides multiple times each week, insurance,
-          Medicare, and Medicaid processes often introduce delays, missed
-          appointments, and unnecessary stress.
+          Medicare, and Medicaid workflows can cause delays and missed appointments.
         </li>
 
         <li>
-          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong><br />
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong>
           We operate independently of insurance networks, care advocates,
           and authorization requirements.
         </li>
 
-          <li>
-            <strong>Technology-driven efficiency keeps pricing transparent</strong><br />
-            By using sophisticated routing, scheduling, and customer experience
-            technology, Care Mobility operates efficiently and offers clear,
-            predictable pricing without insurance complexity.
-          </li>
+        <li>
+          <strong>Technology-driven efficiency keeps pricing transparent</strong>
+          Sophisticated routing, scheduling, and customer experience technology
+          allow Care Mobility to operate efficiently without insurance complexity.
+        </li>
 
-          <li>
-            <strong>No approvals. No middle layers.</strong><br />
-            Just reliable, recurring transportation that starts quickly and
-            stays consistent — week after week.
-          </li>
+        <li>
+          <strong>No approvals. No middle layers.</strong>
+          Just reliable, recurring transportation that starts quickly
+          and stays consistent.
+        </li>
       </ul>
+    </div>
 
     <div class="alt-images">
       <img src="assets/senior-driver-assist.jpg" alt="Driver assisting senior into vehicle" />
-      <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving calmly at medical appointment" />
+      <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving calmly at appointment" />
     </div>
 
   </div>
 </section>
-<!-- ========================= -->
-<!-- NEW MODULE: VEHICLE TYPES -->
-<!-- ========================= -->
+
+<!-- MODULE: VEHICLE TYPES -->
 <section class="alt-module light">
   <div class="alt-container alt-split reverse">
 
@@ -173,27 +175,24 @@
 
       <ul class="alt-bullets">
         <li>
-          <strong>Ambulatory transportation</strong><br />
-          For patients who can walk independently or with minimal assistance,
-          but need reliable, recurring rides to medical appointments.
+          <strong>Ambulatory transportation</strong>
+          For patients who can walk independently or with minimal assistance.
         </li>
 
         <li>
-          <strong>Wheelchair-accessible vans</strong><br />
-          Available when additional mobility support is required, including
-          secure wheelchair transport and assisted entry and exit.
+          <strong>Wheelchair-accessible vans</strong>
+          Secure wheelchair transport with assisted entry and exit.
         </li>
 
         <li>
-          <strong>Flexible as needs change</strong><br />
-          As mobility needs evolve, Care Mobility adapts without re-enrollment,
-          new approvals, or administrative delays.
+          <strong>Flexible as needs change</strong>
+          No re-enrollment, new approvals, or administrative delays.
         </li>
       </ul>
     </div>
 
     <div class="alt-images">
-      <img src="assets/ambulatory-transport-van.jpg" alt="Ambulatory medical transportation van" />
+      <img src="assets/ambulatory-transport-van.jpg" alt="Ambulatory medical transport vehicle" />
       <img src="assets/wheelchair-transport-van.jpg" alt="Wheelchair accessible medical van" />
     </div>
 
