--- a/index.html
+++ b/index.html
@@ -122,45 +122,52 @@
 <section class="alt-module">
   <div class="alt-container alt-split">
 
+    <!-- LEFT: COPY -->
     <div class="alt-text">
       <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
 
       <ul class="alt-bullets">
         <li>
-          <strong>Insurance-based transportation adds friction</strong>
-          Medicare, Medicaid, and insurance programs often require paperwork,
-          eligibility checks, and authorization before rides can be scheduled.
+          <strong>Insurance-based transportation adds friction</strong><br />
+          Many services depend on <strong>Medicare, Medicaid, or insurance approvals</strong>,
+          requiring paperwork, eligibility checks, and authorization workflows
+          before rides can even be scheduled.
         </li>
 
         <li>
-          <strong>Medicare and Medicaid delays affect recurring care</strong>
+          <strong>Delays hurt patients with recurring care</strong><br />
           For patients who need rides multiple times each week, insurance,
-          Medicare, and Medicaid workflows can cause delays and missed appointments.
+          Medicare, and Medicaid processes often introduce delays, missed
+          appointments, and unnecessary stress.
         </li>
 
         <li>
-          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong>
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong><br />
           We operate independently of insurance networks, care advocates,
           and authorization requirements.
         </li>
 
         <li>
-          <strong>Technology-driven efficiency keeps pricing transparent</strong>
-          Sophisticated routing, scheduling, and customer experience technology
-          allow Care Mobility to operate efficiently without insurance complexity.
+          <strong>Technology-driven efficiency keeps pricing transparent</strong><br />
+          By using sophisticated routing, scheduling, and customer experience
+          technology, Care Mobility operates efficiently and offers clear,
+          predictable pricing without insurance complexity.
         </li>
 
         <li>
-          <strong>No approvals. No middle layers.</strong>
+          <strong>No approvals. No middle layers.</strong><br />
           Just reliable, recurring transportation that starts quickly
-          and stays consistent.
+          and stays consistent — week after week.
         </li>
       </ul>
     </div>
 
+    <!-- RIGHT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/senior-driver-assist.jpg" alt="Driver assisting senior into vehicle" />
-      <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving calmly at appointment" />
+      <img src="assets/senior-driver-assist.jpg"
+           alt="Driver assisting senior into vehicle" />
+      <img src="assets/senior-arrival-medical.jpg"
+           alt="Senior arriving calmly at medical appointment" />
     </div>
 
   </div>
