--- a/index.html
+++ b/index.html
@@ -243,52 +243,60 @@
   </div>
 </section>
 
-<!-- COMPARISON -->
-<section class="compare">
-  <h2>How Care Mobility Compares</h2>
+<!-- FAQ -->
+<section class="faq">
+  <h2>Common Questions About Care Mobility</h2>
 
-  <table>
-    <thead>
-      <tr>
-        <th></th>
-        <th>Care Mobility</th>
-        <th>Rideshare</th>
-        <th>Traditional Medical Transport</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Built for recurring medical care</td>
-        <td>✓</td>
-        <td>✕</td>
-        <td>✕</td>
-      </tr>
-      <tr>
-        <td>Predictable, fixed pricing</td>
-        <td>✓</td>
-        <td>Surge pricing</td>
-        <td>✕</td>
-      </tr>
-      <tr>
-        <td>Minimal paperwork</td>
-        <td>✓</td>
-        <td>✓</td>
-        <td>Insurance approvals</td>
-      </tr>
-      <tr>
-        <td>Same driver & routine</td>
-        <td>✓</td>
-        <td>✕</td>
-        <td>✕</td>
-      </tr>
-      <tr>
-        <td>Patient-first experience</td>
-        <td>✓</td>
-        <td>✕</td>
-        <td>✕</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="faq-list">
+
+    <div class="faq-item">
+      <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
+      <p>
+        Care Mobility is a private-pay service and does not bill Medicare,
+        Medicaid, or insurance. This allows us to avoid approvals, paperwork,
+        and delays that often interfere with recurring medical care.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Why would I choose private pay instead of insurance-based transportation?</h3>
+      <p>
+        Insurance-based transportation often requires eligibility checks,
+        authorizations, and long scheduling windows. For patients who need
+        rides multiple times each week, those delays can lead to missed
+        appointments and added stress. Care Mobility offers faster setup,
+        predictable scheduling, and consistent service.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Is Care Mobility still affordable without Medicare or Medicaid?</h3>
+      <p>
+        Yes. By using sophisticated routing, scheduling, and customer
+        experience technology, Care Mobility operates efficiently and
+        offers transparent, predictable pricing without insurance complexity.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Who is Care Mobility best suited for?</h3>
+      <p>
+        Care Mobility is ideal for seniors and patients who require
+        recurring transportation for dialysis, therapy, radiation,
+        infusion treatments, or other ongoing medical appointments.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can Care Mobility support changing mobility needs?</h3>
+      <p>
+        Yes. Care Mobility supports ambulatory and wheelchair-accessible
+        transportation and can adapt as mobility needs change—without
+        re-enrollment, new approvals, or administrative delays.
+      </p>
+    </div>
+
+  </div>
 </section>
 
 <!-- QUOTES -->
