--- a/index.html
+++ b/index.html
@@ -116,45 +116,45 @@
   <div class="alt-container alt-split">
 
     <!-- LEFT: COPY -->
-    <div class="alt-text">
+    <div class="alt-text alt-flat">
       <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
 
-      <ul class="alt-bullets">
+      <ul class="alt-bullets flat">
         <li>
-          <strong>Insurance-based transportation adds friction</strong><br />
-          Many services depend on <strong>Medicare, Medicaid, or insurance approvals</strong>,
+          <strong>Insurance-based transportation adds friction.</strong>
+          Many services depend on Medicare, Medicaid, or insurance approvals,
           requiring paperwork, eligibility checks, and authorization workflows
           before rides can even be scheduled.
         </li>
 
         <li>
-          <strong>Delays hurt patients with recurring care</strong><br />
+          <strong>Delays hurt patients with recurring care.</strong>
           For patients who need rides multiple times each week, insurance,
           Medicare, and Medicaid processes often introduce delays, missed
           appointments, and unnecessary stress.
         </li>
 
         <li>
-          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance</strong><br />
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance.</strong>
           We operate independently of insurance networks, care advocates,
           and authorization requirements.
         </li>
 
         <li>
-          <strong>Technology-driven efficiency keeps pricing transparent</strong><br />
+          <strong>Technology-driven efficiency keeps pricing transparent.</strong>
           By using sophisticated routing, scheduling, and customer experience
           technology, Care Mobility operates efficiently and offers clear,
           predictable pricing without insurance complexity.
         </li>
 
         <li>
-          <strong>No approvals. No middle layers.</strong><br />
-          Just reliable, recurring transportation that starts quickly
-          and stays consistent — week after week.
+          <strong>No approvals. No middle layers.</strong>
+          Just reliable, recurring transportation that starts quickly and
+          stays consistent — week after week.
         </li>
       </ul>
     </div>
-
+    
     <!-- RIGHT: IMAGES -->
     <div class="alt-images">
       <img src="assets/senior-driver-assist.jpg"
