--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       <ul class="alt-bullets flat">
         <li>
           <strong>Insurance-based transportation adds friction.</strong>
-          Many services depend on Medicare, Medicaid, or insurance approvals,
-          requiring paperwork, eligibility checks, and authorization workflows
+          Don't depend on Medicare, Medicaid, or insurance approvals,
+          that require paperwork, eligibility checks, and authorization workflows
           before rides can even be scheduled.
         </li>
 
@@ -154,7 +154,7 @@
         </li>
       </ul>
     </div>
-    
+
     <!-- RIGHT: IMAGES -->
     <div class="alt-images">
       <img src="assets/senior-driver-assist.jpg"
