--- a/index.html
+++ b/index.html
@@ -104,13 +104,6 @@
   </div>
 </section>
 
-<!-- IMAGE BREAK -->
-<section class="image-break">
-  <div class="image-frame">
-    <img src="assets/senior-assist.jpg" alt="Senior assisted into car" />
-  </div>
-</section>
-
 <!-- MODULE: SIMPLER ALTERNATIVE -->
 <section class="alt-module">
   <div class="alt-container alt-split">
@@ -161,8 +154,9 @@
            alt="Driver assisting senior into vehicle" />
       <img src="assets/senior-arrival-medical.jpg"
            alt="Senior arriving calmly at medical appointment" />
+      <img src="assets/senior-assist.jpg"
+           alt="Senior assisted into vehicle at home" />
     </div>
-
   </div>
 </section>
 
