--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </div>
 </section>
 
-<!-- MODULE: VEHICLE TYPES -->
+<!-- MODULE: VEHICLE TYPES & EXTENDED SERVICES -->
 <section class="alt-module light">
   <div class="alt-container alt-split reverse">
 
@@ -170,17 +170,34 @@
       <ul class="alt-bullets">
         <li>
           <strong>Ambulatory transportation</strong>
-          For patients who can walk independently or with minimal assistance.
+          For patients who can walk independently or with minimal assistance,
+          with calm, assisted entry and exit when needed.
         </li>
 
         <li>
           <strong>Wheelchair-accessible vans</strong>
-          Secure wheelchair transport with assisted entry and exit.
+          Secure wheelchair transport with assisted boarding, securement,
+          and comfortable arrival at medical facilities.
+        </li>
+
+        <li>
+          <strong>Exclusive wait-and-return service</strong>
+          Drivers can remain on-site during treatments and return patients
+          home immediately once appointments are completed — eliminating
+          long waits, secondary pickups, or ride uncertainty.
+        </li>
+
+        <li>
+          <strong>Support beyond the appointment</strong>
+          Transportation can include pharmacy stops, lab visits, medical
+          supply pickup, or other essential senior errands tied to care days.
         </li>
 
         <li>
           <strong>Flexible as needs change</strong>
-          No re-enrollment, new approvals, or administrative delays.
+          Transition easily between ambulatory and wheelchair service, add
+          wait time, or include errands — without re-enrollment, approvals,
+          or administrative delays.
         </li>
       </ul>
     </div>
@@ -197,35 +214,63 @@
 <section class="why">
   <div class="why-left">
     <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
+
     <p>
-      Many seniors don’t need transportation just once. They need it multiple
-      times each week, often on a fixed and unforgiving schedule.
+      Many seniors don’t need transportation once. They need it multiple
+      times each week, on a fixed schedule that doesn’t allow for delays,
+      rescheduling, or administrative errors.
     </p>
+
     <p>
-      When rides are missed or delayed, appointments are skipped, treatments
-      are disrupted, stress increases, and families and caregivers are forced
-      to step in at the last minute.
+      Insurance-based transportation is often presented as “covered,”
+      but the reality is very different. Medicare, Medicaid, and insurance
+      rides come with paperwork, eligibility checks, authorizations,
+      care coordinators, and long scheduling windows.
     </p>
+
     <p>
-      <strong>Care Mobility is different.</strong> It’s designed specifically for
-      recurring medical care, with predictable pickup times, familiar drivers,
-      consistent routines, and fixed, transparent pricing — all without
-      insurance, Medicare, or Medicaid paperwork.
+      That administrative complexity doesn’t disappear — it shows up as
+      missed pickups, delayed care, last-minute cancellations, and higher
+      overall costs that families ultimately absorb anyway.
+    </p>
+
+    <p class="why-emphasis">
+      <strong>Health should never be compromised by paperwork.</strong>
+      Recurring medical care depends on consistency, not approvals.
+    </p>
+
+    <p>
+      <strong>Care Mobility removes those barriers.</strong> We’re designed
+      specifically for recurring medical transportation, with predictable
+      pickup times, familiar drivers, consistent routines, and fixed,
+      transparent pricing — without Medicare, Medicaid, or insurance
+      administration slowing care down.
     </p>
   </div>
 
   <div class="why-right">
     <div class="why-card">
-      <strong>Rideshare is unpredictable</strong>
-      <p>Pricing fluctuates, drivers change daily, and availability isn’t guaranteed.</p>
+      <strong>Insurance-based transport adds hidden costs</strong>
+      <p>
+        Administrative overhead, authorizations, and delays are built into
+        the system — and patients pay for them in time, stress, and missed care.
+      </p>
     </div>
+
     <div class="why-card">
-      <strong>Traditional medical transport is bureaucratic</strong>
-      <p>Paperwork, insurance approvals, and long scheduling windows are common.</p>
+      <strong>Rideshare isn’t built for medical routines</strong>
+      <p>
+        Driver availability changes daily, pricing fluctuates, and there’s
+        no consistency for patients who rely on repeat care.
+      </p>
     </div>
+
     <div class="why-card highlight">
-      <strong>Care Mobility is patient-first</strong>
-      <p>Same routines, familiar drivers, and dependable pickup times.</p>
+      <strong>Care Mobility keeps care moving</strong>
+      <p>
+        No approvals. No paperwork. No middle layers. Just dependable,
+        recurring transportation that works week after week.
+      </p>
     </div>
   </div>
 </section>
