--- a/index.html
+++ b/index.html
@@ -162,8 +162,21 @@
 
 <!-- MODULE: VEHICLE TYPES & EXTENDED SERVICES -->
 <section class="alt-module light">
-  <div class="alt-container alt-split reverse">
+  <div class="alt-container alt-split">
 
+    <!-- LEFT: IMAGES -->
+    <div class="alt-images">
+      <img src="assets/senior-driver-assist.jpg"
+           alt="Driver assisting senior out of vehicle" />
+
+      <img src="assets/wheelchair-transport-van.jpg"
+           alt="Wheelchair accessible medical transport van" />
+
+      <img src="assets/senior-post-appointment.jpg"
+           alt="Senior leaving medical appointment with caregiver" />
+    </div>
+
+    <!-- RIGHT: COPY -->
     <div class="alt-text">
       <h2>Ambulatory & Wheelchair-Accessible Transportation</h2>
 
@@ -200,11 +213,6 @@
           or administrative delays.
         </li>
       </ul>
-    </div>
-
-    <div class="alt-images">
-      <img src="assets/ambulatory-transport-van.jpg" alt="Ambulatory medical transport vehicle" />
-      <img src="assets/wheelchair-transport-van.jpg" alt="Wheelchair accessible medical van" />
     </div>
 
   </div>
