--- a/index.html
+++ b/index.html
@@ -219,123 +219,85 @@
 </section>
 
 <!-- WHY -->
-<section class="why">
-  <div class="why-left">
-    <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
+<section class="why why-narrative">
+  <div class="why-inner">
+    <div class="why-left">
+      <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
 
-    <p>
-      Many seniors don’t need transportation once. They need it multiple
-      times each week, on a fixed schedule that doesn’t allow for delays,
-      rescheduling, or administrative errors.
-    </p>
-
-    <p>
-      Insurance-based transportation is often presented as “covered,”
-      but the reality is very different. Medicare, Medicaid, and insurance
-      rides come with paperwork, eligibility checks, authorizations,
-      care coordinators, and long scheduling windows.
-    </p>
-
-    <p>
-      That administrative complexity doesn’t disappear — it shows up as
-      missed pickups, delayed care, last-minute cancellations, and higher
-      overall costs that families ultimately absorb anyway.
-    </p>
-
-    <p class="why-emphasis">
-      <strong>Health should never be compromised by paperwork.</strong>
-      Recurring medical care depends on consistency, not approvals.
-    </p>
-
-    <p>
-      <strong>Care Mobility removes those barriers.</strong> We’re designed
-      specifically for recurring medical transportation, with predictable
-      pickup times, familiar drivers, consistent routines, and fixed,
-      transparent pricing — without Medicare, Medicaid, or insurance
-      administration slowing care down.
-    </p>
-  </div>
-
-  <div class="why-right">
-    <div class="why-card">
-      <strong>Insurance-based transport adds hidden costs</strong>
       <p>
-        Administrative overhead, authorizations, and delays are built into
-        the system — and patients pay for them in time, stress, and missed care.
+        Many seniors don’t need transportation once. They need it multiple
+        times each week, on a fixed schedule that doesn’t allow for delays,
+        rescheduling, or uncertainty.
       </p>
-    </div>
 
-    <div class="why-card">
-      <strong>Rideshare isn’t built for medical routines</strong>
       <p>
-        Driver availability changes daily, pricing fluctuates, and there’s
-        no consistency for patients who rely on repeat care.
+        Insurance-based transportation is often presented as “covered,”
+        but the reality is very different. Medicare, Medicaid, and insurance
+        rides come with paperwork, eligibility checks, authorizations,
+        and long scheduling windows.
       </p>
-    </div>
 
-    <div class="why-card highlight">
-      <strong>Care Mobility keeps care moving</strong>
       <p>
-        No approvals. No paperwork. No middle layers. Just dependable,
-        recurring transportation that works week after week.
+        That administrative complexity doesn’t disappear — it shows up as
+        missed pickups, delayed care, last-minute cancellations, and higher
+        overall costs that families ultimately absorb anyway.
+      </p>
+
+      <p class="why-emphasis">
+        <strong>Health should never be compromised by paperwork.</strong>
+        Recurring medical care depends on consistency, not approvals.
+      </p>
+
+      <p>
+        <strong>Care Mobility removes those barriers.</strong> We’re designed
+        specifically for recurring medical transportation, with predictable
+        pickup times, familiar drivers, consistent routines, and transparent
+        pricing — without administrative friction slowing care down.
       </p>
     </div>
   </div>
 </section>
 
 <!-- FAQ -->
-<section class="faq">
-  <h2>Common Questions About Care Mobility</h2>
+<!-- FAQ -->
+<section class="faq faq-contrast">
+  <div class="faq-inner">
+    <h2>Common Questions About Care Mobility</h2>
 
-  <div class="faq-list">
+    <div class="faq-list">
 
-    <div class="faq-item">
-      <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
-      <p>
-        Care Mobility is a private-pay service and does not bill Medicare,
-        Medicaid, or insurance. This allows us to avoid approvals, paperwork,
-        and delays that often interfere with recurring medical care.
-      </p>
+      <div class="faq-item">
+        <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
+        <p>
+          Care Mobility is a private-pay service and does not bill Medicare,
+          Medicaid, or insurance. This allows us to avoid approvals,
+          paperwork, and delays that often interfere with recurring
+          medical care.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Why choose private pay instead of insurance-based transportation?</h3>
+        <p>
+          Insurance-based transportation often requires eligibility checks,
+          authorizations, and long scheduling windows. For patients who need
+          rides multiple times each week, those delays can lead to missed
+          appointments and added stress. Care Mobility offers faster setup,
+          predictable scheduling, and consistent service.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Is Care Mobility still affordable without Medicare or Medicaid?</h3>
+        <p>
+          Yes. By using sophisticated routing, scheduling, and customer
+          experience technology, Care Mobility operates efficiently and
+          offers transparent, predictable pricing without insurance
+          complexity.
+        </p>
+      </div>
+
     </div>
-
-    <div class="faq-item">
-      <h3>Why would I choose private pay instead of insurance-based transportation?</h3>
-      <p>
-        Insurance-based transportation often requires eligibility checks,
-        authorizations, and long scheduling windows. For patients who need
-        rides multiple times each week, those delays can lead to missed
-        appointments and added stress. Care Mobility offers faster setup,
-        predictable scheduling, and consistent service.
-      </p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Is Care Mobility still affordable without Medicare or Medicaid?</h3>
-      <p>
-        Yes. By using sophisticated routing, scheduling, and customer
-        experience technology, Care Mobility operates efficiently and
-        offers transparent, predictable pricing without insurance complexity.
-      </p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Who is Care Mobility best suited for?</h3>
-      <p>
-        Care Mobility is ideal for seniors and patients who require
-        recurring transportation for dialysis, therapy, radiation,
-        infusion treatments, or other ongoing medical appointments.
-      </p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Can Care Mobility support changing mobility needs?</h3>
-      <p>
-        Yes. Care Mobility supports ambulatory and wheelchair-accessible
-        transportation and can adapt as mobility needs change—without
-        re-enrollment, new approvals, or administrative delays.
-      </p>
-    </div>
-
   </div>
 </section>
 
