--- a/index.html
+++ b/index.html
@@ -258,75 +258,71 @@
   </div>
 </section>
 
-
 <!-- FAQ -->
 <section class="faq faq-contrast">
-  <div class="faq-list">
+  <div class="faq-inner">
 
-  <div class="faq-item">
-    <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
-    <p>
-      Care Mobility is a private-pay service and does not bill Medicare,
-      Medicaid, or insurance. This allows us to avoid approvals, paperwork,
-      and delays that often interfere with recurring medical care.
-    </p>
+    <h2>Questions About Private-Pay Medical Transportation</h2>
+
+    <div class="faq-list">
+
+      <div class="faq-item">
+        <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
+        <p>
+          Care Mobility is a private-pay service and does not bill Medicare,
+          Medicaid, or insurance. This allows us to avoid approvals,
+          paperwork, and delays that often interfere with recurring
+          medical care.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Why would I pay out of pocket for medical transportation?</h3>
+        <p>
+          Because getting to care on time cannot be compromised. For
+          recurring treatments like dialysis, radiation, or therapy,
+          missed or delayed rides can disrupt care plans, increase
+          health risks, and create unnecessary stress.
+        </p>
+        <p>
+          Care Mobility is designed to prioritize consistency and
+          reliability over administrative processing.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Isn’t insurance-based transportation cheaper?</h3>
+        <p>
+          Insurance-based transportation often appears cheaper, but the
+          real cost shows up in delays, missed pickups, rescheduling,
+          and time lost. Many families end up paying out of pocket anyway
+          to avoid disruptions.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>How does Care Mobility keep pricing reasonable?</h3>
+        <p>
+          Care Mobility uses advanced routing, scheduling, and customer
+          experience technology to operate efficiently. By eliminating
+          insurance processing and administrative overhead, we keep
+          pricing transparent and predictable while delivering reliable
+          service.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Who typically chooses Care Mobility?</h3>
+        <p>
+          Care Mobility is most often chosen by seniors, adult children,
+          and caregivers who value reliability and consistency for
+          recurring medical care and cannot risk missed or delayed
+          appointments.
+        </p>
+      </div>
+
+    </div>
   </div>
-
-  <div class="faq-item">
-    <h3>Why would I pay out of pocket for medical transportation?</h3>
-    <p>
-      Because getting to care on time cannot be compromised. For recurring
-      treatments like dialysis, radiation, or therapy, missed or delayed
-      rides can disrupt care plans, increase health risks, and create
-      unnecessary stress. Care Mobility is designed to prioritize
-      consistency and reliability over administrative processing.
-    </p>
-  </div>
-
-  <div class="faq-item">
-    <h3>Isn’t insurance-based transportation cheaper?</h3>
-    <p>
-      Insurance-based transportation often appears cheaper, but the true
-      cost shows up in delays, missed pickups, rescheduling, and time lost.
-      Many families end up paying out of pocket anyway to avoid disruptions.
-      Care Mobility removes those tradeoffs by delivering predictable,
-      dependable service from the start.
-    </p>
-  </div>
-
-  <div class="faq-item">
-    <h3>How does Care Mobility keep pricing reasonable without insurance?</h3>
-    <p>
-      Care Mobility uses advanced routing, scheduling, and customer
-      experience technology to operate efficiently. By eliminating
-      administrative overhead, manual coordination, and insurance
-      processing, we keep pricing transparent and predictable while
-      maintaining high service reliability.
-    </p>
-  </div>
-
-  <div class="faq-item">
-    <h3>How is Care Mobility different from traditional private drivers?</h3>
-    <p>
-      Traditional private drivers often lack medical routine experience,
-      structured scheduling, and operational support. Care Mobility is
-      purpose-built for recurring medical care, combining trained drivers
-      with technology that ensures consistent pickup times and dependable
-      service week after week.
-    </p>
-  </div>
-
-  <div class="faq-item">
-    <h3>What if my appointments happen multiple times each week?</h3>
-    <p>
-      That’s exactly who Care Mobility is built for. Our service is designed
-      around recurring schedules, not one-off rides, so patients can rely
-      on the same routines without rebooking, reauthorizing, or re-explaining
-      their needs each time.
-    </p>
-  </div>
-
-</div>
 </section>
 
 <!-- QUOTES -->
