--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <section class="faq faq-contrast">
   <div class="faq-inner">
 
-    <h2>Questions About Private-Pay Medical Transportation</h2>
+    <h2>Frequently Asked Questions About Care Mobility Transportation</h2>
 
     <div class="faq-list">
 
@@ -272,7 +272,7 @@
           Care Mobility is a private-pay service and does not bill Medicare,
           Medicaid, or insurance. This allows us to avoid approvals,
           paperwork, and delays that often interfere with recurring
-          medical care.
+          medical care and a compelling price to you.
         </p>
       </div>
 
@@ -286,7 +286,8 @@
         </p>
         <p>
           Care Mobility is designed to prioritize consistency and
-          reliability over administrative processing.
+          reliability over administrative processing, which reduces 
+          our costs and improves your experience.
         </p>
       </div>
 
@@ -295,8 +296,7 @@
         <p>
           Insurance-based transportation often appears cheaper, but the
           real cost shows up in delays, missed pickups, rescheduling,
-          and time lost. Many families end up paying out of pocket anyway
-          to avoid disruptions.
+          and time lost. Many families end up paying with frustration.
         </p>
       </div>
 
