--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <section class="faq faq-contrast">
   <div class="faq-inner">
 
-    <h2>Frequently Asked Questions About Care Mobility Transportation</h2>
+    <h2>Frequently Asked Questions About Care Mobility</h2>
 
     <div class="faq-list">
 
