--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 
 <!-- SERVICES -->
 <section class="services">
-  <h2>Recurring Medical Transportation, Done Right</h2>
-  <p class="section-intro">
-    Care Mobility is designed for patients who need the same ride,
-    to the same place, on the same schedule — without the stress
-    of coordinating transportation every time.
-  </p>
+  <h2>
+  Care Mobility is designed for patients who need the same ride, 
+  to the same place, on the same schedule — without the stress of 
+  coordinating transportation every time.
+  </h2>
 
   <div class="service-grid">
     <div class="service-card">
@@ -166,7 +165,7 @@
 
     <!-- LEFT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/senior-driver-assist.jpg"
+      <img src="assets/sedan-assisted-entry.jpg"
            alt="Driver assisting senior out of vehicle" />
 
       <img src="assets/wheelchair-transport-van.jpg"
