--- a/index.html
+++ b/index.html
@@ -217,43 +217,54 @@
   </div>
 </section>
 
-<!-- WHY -->
-<section class="why why-narrative">
-  <div class="why-inner">
-    <div class="why-left">
-      <h2>Why Reliable, Recurring<br>Transportation Matters</h2>
+<!-- CARE MOBILITY DIFFERENCE -->
+<section class="alt-module why-narrative">
+  <div class="alt-split">
+
+    <!-- LEFT: COPY -->
+    <div class="alt-text">
+      <h2>Why I startted Care Mobility and our value</h2>
 
       <p>
-        Many seniors don’t need transportation once. They need it multiple
-        times each week, on a fixed schedule that doesn’t allow for delays,
-        rescheduling, or uncertainty.
+        Care Mobility was created to meet a real need in healthcare:
+        dependable medical transportation for seniors who want to stay
+        independent — without placing extra burden on family or loved ones.
       </p>
 
       <p>
-        Insurance-based transportation is often presented as “covered,”
-        but the reality is very different. Medicare, Medicaid, and insurance
-        rides come with paperwork, eligibility checks, authorizations,
-        and long scheduling windows.
+        Too often, existing options create tradeoffs. Seniors face unreliable
+        pickups, families scramble to adjust schedules, and stress builds
+        around making sure care isn’t missed.
       </p>
 
       <p>
-        That administrative complexity doesn’t disappear — it shows up as
-        missed pickups, delayed care, last-minute cancellations, and higher
-        overall costs that families ultimately absorb anyway.
+        We prioritize quality of service first: predictable pickup times,
+        familiar drivers, calm assistance, and consistent routines that work
+        week after week.
+      </p>
+
+      <p>
+        By operating independently and using modern routing and scheduling
+        technology, Care Mobility delivers reliable service at a fair,
+        transparent price that’s often faster and simpler than traditional
+        alternatives.
       </p>
 
       <p class="why-emphasis">
-        <strong>Health should never be compromised by paperwork.</strong>
-        Recurring medical care depends on consistency, not approvals.
-      </p>
-
-      <p>
-        <strong>Care Mobility removes those barriers.</strong> We’re designed
-        specifically for recurring medical transportation, with predictable
-        pickup times, familiar drivers, consistent routines, and transparent
-        pricing — without administrative friction slowing care down.
+        Care Mobility isn’t just about rides.
+        It’s about independence, reliability, and making recurring medical
+        care easier for everyone involved.
       </p>
     </div>
+
+    <!-- RIGHT: BRAND IMAGE -->
+    <div class="alt-images">
+      <img
+        src="assets/care-mobility-difference.png"
+        alt="The Care Mobility Difference – Reliable care. Real independence."
+      />
+    </div>
+
   </div>
 </section>
 
