--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <!-- LEFT: COPY -->
     <div class="alt-text">
-      <h2>Why I startted Care Mobility and our value</h2>
+      <h2>Why I started Care Mobility and our value</h2>
 
       <p>
         Care Mobility was created to meet a real need in healthcare:
