--- a/index.html
+++ b/index.html
@@ -25,27 +25,18 @@
 <section class="hero">
   <div class="hero-copy">
     <h1>Reliable transportation<br>for recurring medical care</h1>
-
     <p>
       <strong>Care Mobility</strong> provides consistent, dependable rides for seniors
       and patients with ongoing medical appointments — built specifically
       for care that repeats week after week.
     </p>
-
     <p class="hero-subcopy">
       With predictable pickup times, familiar drivers, and a patient-first
       approach, Care Mobility removes uncertainty from recurring care.
     </p>
-
     <p class="hero-cta">
       Transportation you can count on — every appointment, every week.
     </p>
-
-    <!-- ADDED CTA (non-destructive) -->
-    <div class="hero-actions">
-      <a href="#form" class="primary-cta">Check Availability</a>
-      <a href="#faq" class="secondary-cta">See FAQs ↓</a>
-    </div>
   </div>
 
   <div class="hero-image">
@@ -53,23 +44,12 @@
   </div>
 </section>
 
-<!-- WHO THIS IS FOR (NEW, LIGHTWEIGHT) -->
-<section class="who-for">
-  <h2>Care Mobility is ideal for:</h2>
-  <ul>
-    <li>Dialysis patients with recurring weekly appointments</li>
-    <li>Seniors attending therapy, radiation, or infusion care</li>
-    <li>Families coordinating transportation for a loved one</li>
-    <li>Home-based care providers supporting ongoing treatment</li>
-  </ul>
-</section>
-
-<!-- SERVICES (UNCHANGED) -->
+<!-- SERVICES -->
 <section class="services">
   <h2>
-    Care Mobility is designed for patients who need the same ride,
-    to the same place, on the same schedule — without the stress of
-    coordinating transportation every time.
+  Care Mobility is designed for patients who need the same ride, 
+  to the same place, on the same schedule — without the stress of 
+  coordinating transportation every time.
   </h2>
 
   <div class="service-grid">
@@ -123,84 +103,257 @@
   </div>
 </section>
 
-<!-- HOW IT WORKS (NEW) -->
-<section class="how-it-works">
-  <h2>How Care Mobility Works</h2>
-
-  <div class="how-steps">
-    <div>
-      <strong>1. Set a recurring schedule</strong>
-      <p>
-        We coordinate consistent pickup and return times based on your
-        treatment schedule — not day-to-day ride requests.
-      </p>
-    </div>
-
-    <div>
-      <strong>2. Same routine, familiar drivers</strong>
-      <p>
-        Predictable timing and familiar faces reduce anxiety for patients
-        and caregivers.
-      </p>
-    </div>
-
-    <div>
-      <strong>3. Reliable rides, week after week</strong>
-      <p>
-        No approvals. No insurance delays. Just dependable transportation
-        that stays consistent over time.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- ALL ALT MODULES, WHY, FAQ, QUOTES (UNCHANGED BELOW THIS LINE) -->
-
 <!-- MODULE: SIMPLER ALTERNATIVE -->
 <section class="alt-module">
   <div class="alt-container alt-split">
+
+    <!-- LEFT: COPY -->
     <div class="alt-text alt-flat">
       <h2>A Simpler Alternative to Insurance-Based Medical Transportation</h2>
+
       <ul class="alt-bullets flat">
-        <li><strong>Insurance-based transportation adds friction.</strong> Approvals, paperwork, and delays.</li>
-        <li><strong>Delays hurt patients with recurring care.</strong></li>
-        <li><strong>Care Mobility does not rely on insurance.</strong></li>
-        <li><strong>Transparent, predictable pricing.</strong></li>
-        <li><strong>No approvals. No middle layers.</strong></li>
+        <li>
+          <strong>Insurance-based transportation adds friction.</strong>
+          Don't depend on Medicare, Medicaid, or insurance approvals,
+          that require paperwork, eligibility checks, and authorization workflows
+          before rides can even be scheduled.
+        </li>
+
+        <li>
+          <strong>Delays hurt patients with recurring care.</strong>
+          For patients who need rides multiple times each week, insurance,
+          Medicare, and Medicaid processes often introduce delays, missed
+          appointments, and unnecessary stress.
+        </li>
+
+        <li>
+          <strong>Care Mobility does not rely on Medicare, Medicaid, or insurance.</strong>
+          We operate independently of insurance networks, care advocates,
+          and authorization requirements.
+        </li>
+
+        <li>
+          <strong>Technology-driven efficiency keeps pricing transparent.</strong>
+          By using sophisticated routing, scheduling, and customer experience
+          technology, Care Mobility operates efficiently and offers clear,
+          predictable pricing without insurance complexity.
+        </li>
+
+        <li>
+          <strong>No approvals. No middle layers.</strong>
+          Just reliable, recurring transportation that starts quickly and
+          stays consistent — week after week.
+        </li>
       </ul>
     </div>
 
+    <!-- RIGHT: IMAGES -->
     <div class="alt-images">
-      <img src="assets/senior-driver-assist.jpg" />
-      <img src="assets/senior-arrival-medical.jpg" />
-      <img src="assets/senior-assist.jpg" />
+      <img src="assets/senior-driver-assist.jpg"
+           alt="Driver assisting senior into vehicle" />
+      <img src="assets/senior-arrival-medical.jpg"
+           alt="Senior arriving calmly at medical appointment" />
+      <img src="assets/senior-assist.jpg"
+           alt="Senior assisted into vehicle at home" />
     </div>
   </div>
 </section>
 
-<!-- EXPECTATIONS (NEW) -->
-<section class="expectations">
-  <h2>What You Can Expect Every Ride</h2>
-  <ul>
-    <li>Clean, comfortable vehicles</li>
-    <li>Assistance entering and exiting the vehicle</li>
-    <li>Respectful, patient-first service</li>
-    <li>On-time arrival for scheduled appointments</li>
-  </ul>
+<!-- MODULE: VEHICLE TYPES & EXTENDED SERVICES -->
+<section class="alt-module light">
+  <div class="alt-container alt-split">
+
+    <!-- LEFT: IMAGES -->
+    <div class="alt-images">
+      <img src="assets/sedan-assisted-entry.jpg"
+           alt="Driver assisting senior out of vehicle" />
+
+      <img src="assets/wheelchair-transport-van.jpg"
+           alt="Wheelchair accessible medical transport van" />
+
+      <img src="assets/senior-post-appointment.jpg"
+           alt="Senior leaving medical appointment with caregiver" />
+    </div>
+
+    <!-- RIGHT: COPY -->
+    <div class="alt-text">
+      <h2>Ambulatory & Wheelchair-Accessible Transportation</h2>
+
+      <ul class="alt-bullets">
+        <li>
+          <strong>Ambulatory transportation</strong>
+          For patients who can walk independently or with minimal assistance,
+          with calm, assisted entry and exit when needed.
+        </li>
+
+        <li>
+          <strong>Wheelchair-accessible vans</strong>
+          Secure wheelchair transport with assisted boarding, securement,
+          and comfortable arrival at medical facilities.
+        </li>
+
+        <li>
+          <strong>Exclusive wait-and-return service</strong>
+          Drivers can remain on-site during treatments and return patients
+          home immediately once appointments are completed — eliminating
+          long waits, secondary pickups, or ride uncertainty.
+        </li>
+
+        <li>
+          <strong>Support beyond the appointment</strong>
+          Transportation can include pharmacy stops, lab visits, medical
+          supply pickup, or other essential senior errands tied to care days.
+        </li>
+
+        <li>
+          <strong>Flexible as needs change</strong>
+          Transition easily between ambulatory and wheelchair service, add
+          wait time, or include errands — without re-enrollment, approvals,
+          or administrative delays.
+        </li>
+      </ul>
+    </div>
+
+  </div>
 </section>
 
-<!-- FINAL CTA (NEW, JUST BEFORE FORM) -->
-<section class="final-cta">
-  <h2>Ready to set up reliable transportation?</h2>
-  <p>
-    Whether you’re a patient, caregiver, or care provider,
-    Care Mobility makes recurring medical transportation simple and dependable.
-  </p>
-  <a href="#form" class="primary-cta">Get Started</a>
+<!-- CARE MOBILITY DIFFERENCE -->
+<section class="alt-module why-narrative">
+  <div class="alt-split">
+
+    <!-- LEFT: COPY -->
+    <div class="alt-text">
+      <h2>Why I started Care Mobility and our value</h2>
+
+      <p>
+        Care Mobility was created to meet a real need in healthcare:
+        dependable medical transportation for seniors who want to stay
+        independent — without placing extra burden on family or loved ones.
+      </p>
+
+      <p>
+        Too often, existing options create tradeoffs. Seniors face unreliable
+        pickups, families scramble to adjust schedules, and stress builds
+        around making sure care isn’t missed.
+      </p>
+
+      <p>
+        We prioritize quality of service first: predictable pickup times,
+        familiar drivers, calm assistance, and consistent routines that work
+        week after week.
+      </p>
+
+      <p>
+        By operating independently and using modern routing and scheduling
+        technology, Care Mobility delivers reliable service at a fair,
+        transparent price that’s often faster and simpler than traditional
+        alternatives.
+      </p>
+
+      <p class="why-emphasis">
+        Care Mobility isn’t just about rides.
+        It’s about independence, reliability, and making recurring medical
+        care easier for everyone involved.
+      </p>
+    </div>
+
+    <!-- RIGHT: BRAND IMAGE -->
+    <div class="alt-images">
+      <img
+        src="assets/care-mobility-difference.png"
+        alt="The Care Mobility Difference – Reliable care. Real independence."
+      />
+    </div>
+
+  </div>
+</section>
+
+<!-- FAQ -->
+<section class="faq faq-contrast">
+  <div class="faq-inner">
+
+    <h2>Frequently Asked Questions About Care Mobility</h2>
+
+    <div class="faq-list">
+
+      <div class="faq-item">
+        <h3>Is Care Mobility covered by Medicare, Medicaid, or insurance?</h3>
+        <p>
+          Care Mobility is a private-pay service and does not bill Medicare,
+          Medicaid, or insurance. This allows us to avoid approvals,
+          paperwork, and delays that often interfere with recurring
+          medical care and a compelling price to you.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Why would I pay out of pocket for medical transportation?</h3>
+        <p>
+          Because getting to care on time cannot be compromised. For
+          recurring treatments like dialysis, radiation, or therapy,
+          missed or delayed rides can disrupt care plans, increase
+          health risks, and create unnecessary stress.
+        </p>
+        <p>
+          Care Mobility is designed to prioritize consistency and
+          reliability over administrative processing, which reduces 
+          our costs and improves your experience.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Isn’t insurance-based transportation cheaper?</h3>
+        <p>
+          Insurance-based transportation often appears cheaper, but the
+          real cost shows up in delays, missed pickups, rescheduling,
+          and time lost. Many families end up paying with frustration.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>How does Care Mobility keep pricing reasonable?</h3>
+        <p>
+          Care Mobility uses advanced routing, scheduling, and customer
+          experience technology to operate efficiently. By eliminating
+          insurance processing and administrative overhead, we keep
+          pricing transparent and predictable while delivering reliable
+          service.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3>Who typically chooses Care Mobility?</h3>
+        <p>
+          Care Mobility is most often chosen by seniors, adult children,
+          and caregivers who value reliability and consistency for
+          recurring medical care and cannot risk missed or delayed
+          appointments.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- QUOTES -->
+<section class="quote">
+  <blockquote>
+    “Reliable transportation is critical to the care we provide. Care Mobility
+    has been a trusted partner for our clients who need recurring medical
+    appointments. Their consistency, predictable scheduling, and familiar
+    drivers make a real difference for both patients and caregivers.”
+    <span>— Director, Home-Based Care Services</span>
+  </blockquote>
+
+  <blockquote class="secondary-quote">
+    “Care Mobility allows our care teams to focus on the patient — not whether
+    transportation will show up. That reliability is invaluable in home-based care.”
+    <span>— Operations Manager, Major Dialysis Center</span>
+  </blockquote>
 </section>
 
 <!-- FORM -->
-<section class="form" id="form">
+<section class="form">
   <h2>Request Transportation or Learn More</h2>
 
   <form name="care-mobility" method="POST" netlify>
