--- a/index.html
+++ b/index.html
@@ -37,12 +37,31 @@
     <p class="hero-cta">
       Transportation you can count on — every appointment, every week.
     </p>
+
+    <!-- ADDED: HERO CTA BUTTONS (insert only) -->
+    <div class="hero-actions">
+      <a href="#form" class="primary-cta">Check Availability</a>
+      <a href="#faq" class="secondary-cta">See FAQs ↓</a>
+    </div>
+    <!-- /ADDED -->
   </div>
 
   <div class="hero-image">
     <img src="assets/pleasant-ride-conversation.jpg" alt="Pleasant ride conversation" />
   </div>
 </section>
+
+<!-- ADDED: WHO THIS IS FOR (insert only) -->
+<section class="who-for">
+  <h2>Care Mobility is ideal for:</h2>
+  <ul>
+    <li>Dialysis patients with recurring weekly appointments</li>
+    <li>Seniors attending therapy, radiation, or infusion care</li>
+    <li>Families coordinating transportation for a loved one</li>
+    <li>Home-based care providers supporting ongoing treatment</li>
+  </ul>
+</section>
+<!-- /ADDED -->
 
 <!-- SERVICES -->
 <section class="services">
@@ -102,6 +121,38 @@
     </div>
   </div>
 </section>
+
+<!-- ADDED: HOW IT WORKS (insert only) -->
+<section class="how-it-works">
+  <h2>How Care Mobility Works</h2>
+
+  <div class="how-steps">
+    <div class="how-step">
+      <strong>1. Set a recurring schedule</strong>
+      <p>
+        We coordinate consistent pickup and return times based on your
+        treatment schedule — not day-to-day ride requests.
+      </p>
+    </div>
+
+    <div class="how-step">
+      <strong>2. Same routine, familiar drivers</strong>
+      <p>
+        Predictable timing and familiar faces reduce anxiety for patients
+        and caregivers.
+      </p>
+    </div>
+
+    <div class="how-step">
+      <strong>3. Reliable rides, week after week</strong>
+      <p>
+        No approvals. No insurance delays. Just dependable transportation
+        that stays consistent over time.
+      </p>
+    </div>
+  </div>
+</section>
+<!-- /ADDED -->
 
 <!-- MODULE: SIMPLER ALTERNATIVE -->
 <section class="alt-module">
@@ -268,6 +319,24 @@
   </div>
 </section>
 
+<!-- ADDED: FAQ ANCHOR TARGET (insert only) -->
+<div id="faq"></div>
+<!-- /ADDED -->
+
+<!-- ADDED: WHAT TO EXPECT (insert only) -->
+<section class="expectations">
+  <div class="expectations-inner">
+    <h2>What You Can Expect Every Ride</h2>
+    <ul>
+      <li>Clean, comfortable vehicles</li>
+      <li>Assistance entering and exiting the vehicle</li>
+      <li>Respectful, patient-first service</li>
+      <li>On-time arrival for scheduled appointments</li>
+    </ul>
+  </div>
+</section>
+<!-- /ADDED -->
+
 <!-- FAQ -->
 <section class="faq faq-contrast">
   <div class="faq-inner">
@@ -351,6 +420,23 @@
     <span>— Operations Manager, Major Dialysis Center</span>
   </blockquote>
 </section>
+
+<!-- ADDED: FORM ANCHOR TARGET (insert only) -->
+<div id="form"></div>
+<!-- /ADDED -->
+
+<!-- ADDED: FINAL CTA (insert only) -->
+<section class="final-cta">
+  <div class="final-cta-inner">
+    <h2>Ready to set up reliable transportation?</h2>
+    <p>
+      Whether you’re a patient, caregiver, or care provider, Care Mobility makes recurring
+      medical transportation simple and dependable.
+    </p>
+    <a href="#form" class="primary-cta">Get Started</a>
+  </div>
+</section>
+<!-- /ADDED -->
 
 <!-- FORM -->
 <section class="form">
